--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="js/Rockets.js"></script>
   <script src="js/BadBird.js"></script>
   <script src="js/Board.js"></script>
+  <script src="js/Explosion.js"></script>
   <script src="js/Game.js"></script>
   <script src="js/main.js"></script>
   
