--- a/index.html
+++ b/index.html
@@ -6,33 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
   
-  <title>Document</title>
+  <title>SusiBird Game</title>
 </head>
 <body>
-  <div class="container">
-    <section class="game-intro">
-      <!-- <img src="./images/susibirds-logo.png" alt="" class="logo-img"> -->
-      <br>
-      <button id="start-button" onclick="loadGame()">Start<br>Game</button>      
-    </section>
-
-    <section id="canvas-container" class="canvas-container">
-      <canvas id="canvas" width="512" height="800"></canvas>
-    </section>
-
-    <section class="white">
-      <h2>Use the arrow keys to control the movements</h2>
-      <img src="./images/arrows.svg" alt="keyboard arrows" class="arrows-img">
-    </section>
+  <div class="container-main">
+    <div class="logo-container">
+      <section class="container">
+        <img src="./images/susibirds-logo.png" alt="image susibirds logo" class="logo-img">
+        <img src="./images/susiBird.png" alt="image susibirds" class="logo-img bird">
+        <!-- <div id="try-button" class="button"><a class="try-button" href="index.html">TRY SUSIBIRD</a></div>               -->
+      </section>
   </div>
-
-  <script src="js/Susibird.js"></script>
-  <script src="js/Rockets.js"></script>
-  <script src="js/BadBird.js"></script>
-  <script src="js/Board.js"></script>
-  <script src="js/Explosion.js"></script>
-  <script src="js/Game.js"></script>
-  <script src="js/main.js"></script>
-  
+  </div> 
+  <script language="javascript" type="text/javascript">
+    window.setTimeout('window.open("game.html","newsite")',4000);
+  </script> 
 </body>
 </html>
